added roque's cool logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             }
          #content
             {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+                position:relative; left: 0; right: 0; bottom: 0; top: 0px; 
             }
     </style>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-		
+		<img src="stripname.jpg" alt="Roque's cool logo">
 		<div id='content'>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/4-aloGTYmIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
