added roque's cool logo 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </head>
 
   <body>
-		<img src="stripname.jpg" alt="Roque's cool logo">
+  		<img src="striplogo.jpg" alt="Roque's other cool logo">
+		<img src="stripname2.jpg" alt="Roque's cool logo">
 		<div id='content'>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/4-aloGTYmIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
