--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
       <h1>Back Story behind this webpage</h1>
       <hr />
       <h3>
-        We had a really cool idea with modeling proteins with AI and ML but we
-        were not able to get the packages working in a virtual environment. So
-        we had to pivot and push anything out that would work.
+        We had a really cool idea with modeling virus proteins with AI and ML.
+        It was suppost to suggest new drugs to help with whatever virus you put
+        in. but we were not able to get the packages working in a virtual
+        environment. So we had to pivot and push anything out that would work.
       </h3>
     </div>
   </body>
